pg notify working

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,9 @@
 [tool:pytest]
 testpaths = tests
 addopts = --isort --aiohttp-loop uvloop --aiohttp-fast
+isort_ignore =
+    src/backend/run.py
+    src/web/run.py
 
 [flake8]
 max-line-length = 120
