--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -5,12 +5,8 @@ services:
     ports:
     - 5001:80
 
-#  nginx:
-#    build: nginx/dev
-#    restart: always
-#    volumes:
-#    - media:/media:ro
-#    ports:
-#    - 5000:80
-#    depends_on:
-#    - web
+  nginx:
+    build: nginx/dev
+    restart: always
+    ports:
+    - 5000:80
