--- a/js/package.json
+++ b/js/package.json
@@ -7,16 +7,28 @@
   "author": "Samuel Colvin <s@muelcolvin.com>",
   "license": "MIT",
   "private": false,
-  "dependencies": {
-    "react": "^16.2.0",
-    "react-app-rewired": "^1.5.0",
-    "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1"
+  "homepage": "/",
+  "engines": {
+    "node": "8.x",
+    "npm": "5.x",
+    "yarn": "1.3.x"
   },
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test --env=jsdom",
-    "eject": "react-app-rewired eject"
+    "eject": "react-app-rewired eject",
+    "lint": "eslint src",
+    "lintfix": "eslint src --fix"
+  },
+  "dependencies": {
+    "babel-polyfill": "^6.26.0",
+    "node-sass": "^4.7.2",
+    "react": "^16.2.0",
+    "react-app-rewired": "^1.5.0",
+    "react-dom": "^16.2.0",
+    "react-scripts": "1.1.1",
+    "sass-loader": "^6.0.7",
+    "webpack": "^3.0.0"
   }
 }
