--- a/js/package.json
+++ b/js/package.json
@@ -27,6 +27,7 @@
     "react": "^16.2.0",
     "react-app-rewired": "^1.5.0",
     "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "sass-loader": "^6.0.7",
     "webpack": "^3.0.0"
