--- a/js/package.json
+++ b/js/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "bootstrap": "^4.0.0",
     "node-sass": "^4.7.2",
     "react": "^16.2.0",
     "react-app-rewired": "^1.5.0",
