--- a/nginx/prod/nginx.conf
+++ b/nginx/prod/nginx.conf
@@ -29,7 +29,7 @@ http {
   }
 
   upstream js_server {
-    server js:8000 fail_timeout=0;
+    server js:80 fail_timeout=0;
   }
 
   server {
@@ -60,7 +60,16 @@ http {
       proxy_set_header Host $http_host;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto https;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_http_version 1.1;
+      proxy_set_header Connection "upgrade";
       proxy_redirect off;
+
+      # 600 will mean websocket connections disconnect,
+      # this is intentional, ws clients should be resilient enough to reconnect
+      proxy_send_timeout 600;
+      proxy_read_timeout 600;
+      proxy_connect_timeout 3;
 
       rewrite /api(/.*) $1 break;
       proxy_pass http://app_server;
@@ -73,12 +82,6 @@ http {
     }
 
     location / {
-      if ($http_referer ~ "^https://[^/]+/pgweb"){
-        rewrite ^/(.*) https://$http_host/pgweb/$1 permanent;
-      }
-      if ($http_referer ~ "^https://[^/]+/api"){
-        rewrite ^/(.*) https://$http_host/api/$1 permanent;
-      }
       # we don't want nginx trying to do something clever with
       # redirects, we set the Host: header above already.
       proxy_redirect off;
