--- a/src/Dockerfile.web
+++ b/src/Dockerfile.web
@@ -13,4 +13,4 @@ ADD ./web/run.py /home/root/run.py
 ENV PYTHONUNBUFFERED 1
 WORKDIR /home/root
 HEALTHCHECK --interval=60s --timeout=10s --retries=2 CMD /home/root/run.py check || exit 1
-ENTRYPOINT ["./run.py"]
+ENTRYPOINT ["./run.py", "web"]
