--- a/nginx/dev/nginx.conf
+++ b/nginx/dev/nginx.conf
@@ -29,7 +29,7 @@ http {
   }
 
   upstream js_server {
-    server js:8000 fail_timeout=0;
+    server js:80 fail_timeout=0;
   }
 
   server {
@@ -41,7 +41,17 @@ http {
 
     location /api/ {
       proxy_set_header Host $http_host;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_http_version 1.1;
+      proxy_set_header Connection "upgrade";
       proxy_redirect off;
+
+      # 600 will mean websocket connections disconnect,
+      # this is intentional, ws clients should be resilient enough to reconnect
+      proxy_send_timeout 600;
+      proxy_read_timeout 600;
+      proxy_connect_timeout 3;
+
       rewrite /api(/.*) $1 break;
       proxy_pass http://app_server;
     }
@@ -53,12 +63,6 @@ http {
     }
 
     location / {
-      if ($http_referer ~ "^https://[^/]+/pgweb"){
-        rewrite ^/(.*) https://$http_host/pgweb/$1 permanent;
-      }
-      if ($http_referer ~ "^https://[^/]+/api"){
-        rewrite ^/(.*) https://$http_host/api/$1 permanent;
-      }
       proxy_redirect off;
       proxy_pass http://js_server;
     }
