lsit views working

--- a/js/.env
+++ b/js/.env
@@ -1,2 +1,2 @@
-REACT_APP_ROOT_URL='http://localhost:8000/api'
+REACT_APP_ROOT_URL='/api'
 REACT_APP_GOOGLE_SIW_CLIENT_KEY='421181039733-sdkjn7bclc9qgvk9a6iqrah0v3fk4aa5.apps.googleusercontent.com'
