--- a/js/package.json
+++ b/js/package.json
@@ -35,6 +35,8 @@
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.0.0",
     "date-fns": "^1.29.0",
+    "lodash": "^4.17.5",
+    "lodash-es": "^4.17.7",
     "node-sass": "^4.7.2",
     "react": "^16.2.0",
     "react-app-rewired": "^1.5.0",
