--- a/src/Dockerfile.backend
+++ b/src/Dockerfile.backend
@@ -3,6 +3,7 @@ FROM python:3.6-alpine
 RUN apk --update --no-cache add gcc g++ musl-dev libuv libffi-dev make postgresql-dev \
  && rm -rf /var/cache/apk/*
 
+RUN pip install -U pip setuptools
 ADD ./requirements.txt /home/root/requirements.txt
 RUN pip install -r /home/root/requirements.txt
 
@@ -12,5 +13,4 @@ ADD ./backend/run.py /home/root/run.py
 
 ENV PYTHONUNBUFFERED 1
 WORKDIR /home/root
-HEALTHCHECK --interval=60s --timeout=10s --retries=2 CMD /home/root/run.py check || exit 1
 ENTRYPOINT ["./run.py"]
