--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,8 +1,6 @@
 aiohttp==3.0.9
-aiohttp_session[secure]==2.3.0
 asyncpg==0.15.0
-cryptography==2.1.4
-google-auth==1.4.1
+async-timeout==2.0.1
 multidict==4.1.0
 pydantic==0.7.1
 raven==6.6.0
