--- a/nginx/dev/nginx.conf
+++ b/nginx/dev/nginx.conf
@@ -46,10 +46,11 @@ http {
       proxy_set_header Connection "upgrade";
       proxy_redirect off;
 
-      # 600 will mean websocket connections disconnect,
+      # 30 will mean websocket connections disconnect,
       # this is intentional, ws clients should be resilient enough to reconnect
-      proxy_send_timeout 600;
-      proxy_read_timeout 600;
+      # less than in prod to easier testing
+      proxy_send_timeout 30;
+      proxy_read_timeout 30;
       proxy_connect_timeout 3;
 
       proxy_pass http://app_server;
