--- a/src/Dockerfile.web
+++ b/src/Dockerfile.web
@@ -14,6 +14,7 @@ ADD ./shared /home/root/shared
 ADD ./web/app /home/root/app
 ADD ./web/run.py /home/root/run.py
 
+ENV IMAGE_NAME mithra_web
 ENV PYTHONUNBUFFERED 1
 WORKDIR /home/root
 HEALTHCHECK --interval=60s --timeout=10s --retries=2 CMD /home/root/run.py check || exit 1
