--- a/src/Dockerfile.web
+++ b/src/Dockerfile.web
@@ -15,6 +15,7 @@ ADD ./web/app /home/root/app
 ADD ./web/run.py /home/root/run.py
 
 ENV IMAGE_NAME mithra_web
+# print used in numerous places doesn't work properly
 ENV PYTHONUNBUFFERED 1
 WORKDIR /home/root
 HEALTHCHECK --interval=60s --timeout=10s --retries=2 CMD /home/root/run.py check || exit 1
