--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -5,9 +5,6 @@ services:
     ports:
     - 5001:80
 
-  js:
-    build: js
-
   web:
     build:
       context: src
@@ -19,7 +16,9 @@ services:
       dockerfile: Dockerfile.backend
 
   nginx:
-    build: nginx/dev
-    restart: always
+    image: nginx:1.13-alpine
+    volumes:
+    - ./nginx/dev/:/etc/nginx/conf.d/:ro
+    - ./js/build/:/js-src/:ro
     ports:
     - 5000:80
