--- a/nginx/prod/nginx.conf
+++ b/nginx/prod/nginx.conf
@@ -1,90 +1,65 @@
-worker_processes 1;
+log_format custom '$http_x_forwarded_for request="$request" status=$status time=${request_time}s '
+                  'request_size=$request_length response_size=$body_bytes_sent '
+                  'referrer="$http_referer"';
+access_log /dev/stdout custom;
 
-user nobody nogroup;
-pid /tmp/nginx.pid;
-error_log /dev/stdout crit;
-
-events {
-  worker_connections 1024; # increase if you have lots of clients
-  accept_mutex off; # set to 'on' if nginx worker_processes > 1
-  use epoll;
+upstream app_server {
+  # fail_timeout=0 means we always retry an upstream even if it failed
+  # to return a good HTTP response
+  # for a TCP configuration
+  server web:8000 fail_timeout=0;
 }
 
-http {
-  include mime.types;
-  # fallback in case we can't determine a type
-  default_type application/octet-stream;
+server {
+  # if no Host match, close the connection
+  listen 443 ssl http2 default_server;
 
-  log_format custom '$http_x_forwarded_for request="$request" status=$status time=${request_time}s '
-                    'request_size=$request_length response_size=$body_bytes_sent '
-                    'referrer="$http_referer"';
-  access_log /dev/stdout custom;
-  sendfile on;
+  ssl on;
+  ssl_certificate /etc/nginx/conf.d/keys/cert.pem;
+  ssl_certificate_key /etc/nginx/conf.d/keys/key.pem;
 
-  upstream app_server {
-    # fail_timeout=0 means we always retry an upstream even if it failed
-    # to return a good HTTP response
-    # for a TCP configuration
-    server web:8000 fail_timeout=0;
+  return 444;
+}
+
+server {
+  listen 443 ssl http2;
+  server_name *.tutorcruncher.com;
+  include /etc/nginx/allowed.nginx.conf;
+
+  ssl on;
+  ssl_certificate /etc/nginx/conf.d/keys/cert.pem;
+  ssl_certificate_key /etc/nginx/conf.d/keys/key.pem;
+
+  client_max_body_size 1G;
+
+  keepalive_timeout 5;
+
+  location /api/ {
+    proxy_set_header Host $http_host;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto https;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_http_version 1.1;
+    proxy_set_header Connection "upgrade";
+    proxy_redirect off;
+
+    # 600 will mean websocket connections disconnect,
+    # this is intentional, ws clients should be resilient enough to reconnect
+    proxy_send_timeout 600;
+    proxy_read_timeout 600;
+    proxy_connect_timeout 3;
+
+    proxy_pass http://app_server;
   }
 
-  upstream js_server {
-    server js:80 fail_timeout=0;
+  location /pgweb/ {
+    access_log off;
+    rewrite /pgweb(/.*) $1 break;
+    proxy_pass http://pgweb;
   }
 
-  server {
-    # if no Host match, close the connection
-    listen 443 ssl http2 default_server;
-
-    ssl on;
-    ssl_certificate /ssl/cert.pem;
-    ssl_certificate_key /ssl/key.pem;
-
-    return 444;
-  }
-
-  server {
-    listen 443 ssl http2;
-    server_name *.tutorcruncher.com;
-    include /etc/nginx/allowed.nginx.conf;
-
-    ssl on;
-    ssl_certificate /ssl/cert.pem;
-    ssl_certificate_key /ssl/key.pem;
-
-    client_max_body_size 4G;
-
-    keepalive_timeout 5;
-
-    location /api/ {
-      proxy_set_header Host $http_host;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto https;
-      proxy_set_header Upgrade $http_upgrade;
-      proxy_http_version 1.1;
-      proxy_set_header Connection "upgrade";
-      proxy_redirect off;
-
-      # 600 will mean websocket connections disconnect,
-      # this is intentional, ws clients should be resilient enough to reconnect
-      proxy_send_timeout 600;
-      proxy_read_timeout 600;
-      proxy_connect_timeout 3;
-
-      proxy_pass http://app_server;
-    }
-
-    location /pgweb/ {
-      access_log off;
-      rewrite /pgweb(/.*) $1 break;
-      proxy_pass http://pgweb;
-    }
-
-    location / {
-      # we don't want nginx trying to do something clever with
-      # redirects, we set the Host: header above already.
-      proxy_redirect off;
-      proxy_pass http://js_server;
-    }
+  location / {
+    alias /js-src/;
+    try_files $uri /index.html =404;
   }
 }
