--- a/nginx/prod/nginx.conf
+++ b/nginx/prod/nginx.conf
@@ -24,7 +24,7 @@ server {
 server {
   listen 443 ssl http2;
   server_name *.tutorcruncher.com;
-  include /etc/nginx/allowed.nginx.conf;
+  include /etc/nginx/conf.d/cloudflare-ips.txt;
 
   ssl on;
   ssl_certificate /etc/nginx/conf.d/keys/cert.pem;
