--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -13,7 +13,7 @@ services:
     image: samuelcolvin/mithra_web:latest
 
   nginx:
-    image: nginx:1.13-alpine
+    image: samuelcolvin/nginx:1.13-alpine
     volumes:
     - /home/ubuntu/nginx-conf/:/etc/nginx/conf.d/:ro
     - /home/ubuntu/js-src/:/js-src/:ro
