--- a/src/Dockerfile.backend
+++ b/src/Dockerfile.backend
@@ -12,6 +12,7 @@ ADD ./backend/main.py /home/root/main.py
 ADD ./backend/run.py /home/root/run.py
 
 ENV IMAGE_NAME mithra_backend
+ENV PYTHONUNBUFFERED 1
 WORKDIR /home/root
 HEALTHCHECK --interval=60s --timeout=10s --retries=2 CMD /home/root/run.py check || exit 1
 ENTRYPOINT ["./run.py"]
